# spot_ros2_ign

champ/: package.xml
champ_base/: package.xml
champ_base/src/: quadruped_controller.cpp
champ_bringup/: package.xml
champ_bringup/config/: anymal_bridge.yaml  champ_params.yaml  champ_params_anymal.yaml  champ_params_go2.yaml  champ_params_spot_arm.yaml  go2_bridge.yaml  ros2_control_anymal.yaml  ros2_control_spot.yaml  spot_bridge.yaml
champ_bringup/launch/: anymal_quadruped_controller.launch.py  anymal_spawn.launch.py  champ_bringup.launch.py  go2_quadruped_controller.launch.py  search_forest_viz.launch.py  search_office_viz.launch.py  spot_bringup.launch.py  spot_quadruped_controller.launch.py  spot_spawn.launch.py  spot_test_quadruped_controller.launch.py
champ_bringup/rviz/: default_view.rviz
champ_description/: package.xml
champ_description/meshes/anymal/: anymal_foot.dae
champ_description/urdf/anymal/: anymal.ros2_control.xacro  anymal.sensors.gazebo.xacro  (+2 more)
champ_gazebo/: CMakeLists.txt  package.xml
champ_gazebo/launch/: launch_gz_world.launch.py
champ_gazebo/models/marsyard2020_terrain/: model.sdf
champ_gazebo/models/moon/: model.sdf
champ_gazebo/models/moon_surface/: model.config  model.sdf
champ_gazebo/models/walking_soldier/: model.config  model.sdf
champ_gazebo/nodes/: move_arm  move_legs  republish_ground_truth  spot_walk
champ_gazebo/src/: helper_publish_base_pose.cpp
champ_gazebo/worlds/: ground_plane.sdf  industrial_plant.sdf  marsyard2020.sdf  search_forest_world.sdf  search_office_world.sdf  subt_urban_circuit_02.sdf
(+3 files in other folders)
